fix: button overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1202,7 +1202,8 @@ template {
   top: 0;
   right: 0;
   height: 100%;
-  width: 65px;
+  min-width: 65px;
+  max-width: 50%;
   border: none;
   font-weight: bold;
   font-size: 12px;
