--- a/sass/blocks/_mailing.sass
+++ b/sass/blocks/_mailing.sass
@@ -50,7 +50,8 @@
     top: 0
     right: 0
     height: 100%
-    width: 65px
+    min-width: 65px
+    max-width: 50%
     border: none
     font-weight: bold
     font-size: 12px
